add login/signup html pages

--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -15,6 +15,7 @@
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/bootstrap.min.css")">
     <!-- Custom styles -->
+    <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/login.css")">
     <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
