--- a/app/views/pages/index.scala.html
+++ b/app/views/pages/index.scala.html
@@ -3,7 +3,7 @@
 @main("Welcome to Play starter") {
 	@header("Home", message)
 
-    <div class="container theme-showcase">
+    <div class="container">
 
       <!-- Main jumbotron for a primary marketing message or call to action -->
       <div class="jumbotron">
