--- a/app/views/pages/page2.scala.html
+++ b/app/views/pages/page2.scala.html
@@ -3,7 +3,7 @@
 @main("Page 2 - Welcome to Play starter") {
 	@header("Page 2", message)
 
-    <div class="container theme-showcase">
+    <div class="container">
 
       <!-- Main jumbotron for a primary marketing message or call to action -->
       <div class="jumbotron">
