--- a/app/views/header.scala.html
+++ b/app/views/header.scala.html
@@ -17,6 +17,7 @@
         <li class="@("active".when(page == "Welcome"))"><a href="@routes.Application.welcome()">Welcome</a></li>
         <li class="@("active".when(page == "Home"))"><a href="@routes.Application.index()">Home</a></li>
         <li class="@("active".when(page == "Page 2"))"><a href="@routes.Application.page2()">Page 2</a></li>
+        <li class="@("active".when(page == "Login"))"><a href="@routes.Application.login()">Login</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
           <ul class="dropdown-menu">
