--- a/app/views/pages/signup.scala.html
+++ b/app/views/pages/signup.scala.html
@@ -1,7 +1,6 @@
-@(message: String)
 
 @main("Login - Welcome to Play starter") {
-	@header("Login", message)
+	@header("Login")
 
     <div class="container">
 
