--- a/app/views/pages/index.scala.html
+++ b/app/views/pages/index.scala.html
@@ -1,7 +1,6 @@
-@(message: String)
 
 @main("Welcome to Play starter") {
-	@header("Home", message)
+	@header("Home")
 
     <div class="container">
 
