--- a/app/views/pages/login.scala.html
+++ b/app/views/pages/login.scala.html
@@ -1,13 +1,12 @@
-@(message: String)
 
 @main("Login - Welcome to Play starter") {
-	@header("Login", message)
+	@header("Login")
 
     <div class="container">
 
       <div class="row login">
 	    <div class="main">
-	      <h3>Please Log In, or <a href="@routes.Application.signup()">Sign Up</a></h3>
+	      <h3>Please Log In, or <a href="#">Sign Up</a></h3>
 	      <div class="row">
 	        <div class="col-xs-6 col-sm-6 col-md-6">
 	          <a href="#" class="btn btn-lg btn-primary btn-block">Facebook</a>
