--- a/app/views/pages/page2.scala.html
+++ b/app/views/pages/page2.scala.html
@@ -1,7 +1,6 @@
-@(message: String)
 
 @main("Page 2 - Welcome to Play starter") {
-	@header("Page 2", message)
+	@header("Page 2")
 
     <div class="container">
 
