add basic MongoDB CRUD

--- a/app/views/header.scala.html
+++ b/app/views/header.scala.html
@@ -16,7 +16,7 @@
       <ul class="nav navbar-nav">
         <li class="@("active".when(page == "Welcome"))"><a href="@routes.PublicApp.welcome()">Welcome</a></li>
         <li class="@("active".when(page == "Home"))"><a href="@routes.PublicApp.index()">Home</a></li>
-        <li class="@("active".when(page == "Page 2"))"><a href="@routes.PublicApp.page2()">Page 2</a></li>
+        <li class="@("active".when(page == "CRUD"))"><a href="@routes.CRUDApp.users()">CRUD</a></li>
         <li class="@("active".when(page == "LoggedHome"))"><a href="@routes.SecuredApp.home()">Logged home</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
