--- a/app/views/pages/CRUD.scala.html
+++ b/app/views/pages/CRUD.scala.html
@@ -1,27 +1,51 @@
-@(users: List[User], userForm: Form[String])
+@(users: List[User], userForm: Form[controllers.CRUDApp.UserFormData])
 
-@import helper._
+@implicitFieldConstructor = @{ helper.FieldConstructor(twitterBootstrapInput.f) }
 @main("User CRUD - Play starter") {
 	@header("CRUD")
     <div class="container">
 	
 	    <h1>@users.size user(s)</h1>
-	    <ul>
-	    @users.map { user =>
-	        <li>
-	            @user.username
-	            @form(routes.CRUDApp.deleteUser(user.username)) {
-	                <input type="submit" value="Delete">
-	            }
-	        </li>
-	    }
-	    </ul>
-	    
-	    <h2>Add a new User</h2>
-	    @form(routes.CRUDApp.newUser) {
-	        @inputText(userForm("username"))
-	        <input type="submit" value="Create">
-	    }
+	    <table class="table table-striped">
+	    	<thead>
+	    		<tr>
+	    			<th>Username</th>
+	    			<th>Name</th>
+	    			<th>Mail</th>
+	    			<th></th>
+	    		</tr>
+	    	</thead>
+	    	<tbody>
+			    @users.map { user =>
+	    		<tr>
+	    			<td>@user.username</td>
+	    			<td>@user.firstName @user.lastName</td>
+	    			<td>@user.mail</td>
+	    			<td>
+		    			@helper.form(routes.CRUDApp.deleteUser(user.username)) {
+			                <button type="submit" class="btn btn-danger">Delete</button>
+			            }
+		            </td>
+	    		</tr>
+			    }
+	    	</tbody>
+	    </table>
+		
+		<div class="col-sm-6">	    
+		    <h2>Add a new User</h2>
+		    @helper.form(routes.CRUDApp.newUser, 'class -> "form-horizontal") {
+		        @helper.inputText(userForm("username"))
+		        @helper.inputText(userForm("firstName"))
+		        @helper.inputText(userForm("lastName"))
+		        @helper.inputText(userForm("mail"))
+		        @helper.inputPassword(userForm("password"))
+				<div class="form-group">
+				    <div class="col-sm-offset-2 col-sm-10">
+						<button type="submit" class="btn btn-default">Create</button>
+				    </div>
+				</div>
+		    }
+	    </div>
     
     </div> <!-- /container -->
 }
